Replace PhoneIndex with RedisHashPropertyIndex
Introduce a generic PropertyIndex API and RedisHashPropertyIndex implementation (value -> workerId HASH per group/property). Remove PhoneIndex and IndexMutation and update FactsIndexStore to accept indexed property sets and use fixed Redis Lua paths for worker-replace and platform-patch. Update MatchingComposition, QueryFunctions, pool fixtures, tests and docs to use property HASH lookups (HMGET) and to reflect startup/no-rebuild and last-writer retention semantics. Many tests adjusted to new commands/behaviour and new index keys; docs and integration tests updated accordingly.